# simple-netbox

./: .gitignore  LICENSE  README.md  Taskfile.yml  model.py  netbox-openapi.json  plan.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
scripts/: example.py
src/simple_netbox/: __init__.py  exceptions.py  netbox.py
src/simple_netbox/crud/: base.py  dcim.py  tenancy.py
src/simple_netbox/models/: base.py
src/simple_netbox/models/dcim/: site.py
src/simple_netbox/models/tenancy/: tenant.py
